--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "shoperz ecommerce single vendor (api)",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "SET NODE_ENV=production&&node index.js",
+    "dev": "SET NODE_ENV=development&&nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
