--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "SET NODE_ENV=production&&node index.js",
-    "dev": "SET NODE_ENV=development&&nodemon index.js"
+    "dev": "SET NODE_ENV=development&&nodemon index.js",
+    "format": "prettier --write --check **/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8"
   }
 }
