--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "rotating-file-stream": "^3.1.0",
+    "slugify": "^1.6.6",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
