--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -33,6 +34,7 @@
     "nodemailer": "^6.9.1",
     "rotating-file-stream": "^3.1.0",
     "slugify": "^1.6.6",
+    "stripe": "^12.12.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
