--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "SET NODE_ENV=production&&node index.js",
     "dev": "SET NODE_ENV=development&&nodemon index.js",
-    "format": "prettier --write --check **/**/*.js"
+    "format": "prettier --write --check **/**/*.js",
+    "create-docs": "swagger-jsdoc -d swagger-def.js routes/*.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,8 @@
     "rotating-file-stream": "^3.1.0",
     "slugify": "^1.6.6",
     "stripe": "^12.12.0",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "5.0.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
