fix mime type problem vercel

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,34 @@
       "src": "/(.*)",
       "dest": "/"
     }
+  ],
+  "headers": [
+    {
+      "source": "/api/v1/docs/swagger-ui.css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    },
+    {
+      "source": "/api/v1/docs/swagger-ui-bundle.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/api/v1/docs/swagger-ui-standalone-preset.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/javascript"
+        }
+      ]
+    }
   ]
 }
